@@ -16,6 +16,7 @@ version 2.0-rc0 XX-Feb-2012
 			Menu could be enabled/disabled (no events will be accepted when it is disabled)
 			It is possible to change its priority on runtime
 			Renamed kCCMenuTouchPriority -> kCCMenuHandlerPriority
+. [NEW] Node: userData is a retained object, and not a void pointer.
 . [NEW] Sprite: spriteWithBatchNode / initWithBatchNode were removed. Use initWithTexture:batch.texture / spriteWithTexture:batch.texture instead
 . [NEW] TextureAtlas: Added option to not use VAO (might be a bit slower, but it consumes less memory)
 . [NEW] TileMap: polygon, polilines and gid are parsed from the objects (issue #1311)
